fix picture not fitting in section & add text

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,5 @@
+$lineHeight: 84vh;
+
 .nav-text{
     color: white;
     cursor: pointer;
@@ -15,7 +17,15 @@
 .bckgrnd-image{
     background-image: url("../images/DSC_1114.jpg");
     background-repeat: no-repeat;
+    background-size:cover;
     width: 100%;
-    height: 84vh;
-    object-fit: contain;
+    height: $lineHeight;
+}
+
+.text-align{
+    text-align: center;
+    line-height: $lineHeight;
+    font-size: 3em;
+    font-family: sans-serif;
+    overflow-wrap:break-word;
 }
